    NetBSD.
  o Rahul Powar pointed out a memory leak in the WAV file handler.
    It wasn't calling the correct close() function when closing
    input files.
  o Modified play.1 man page to not use multiple name lines.  This
    appears to confuse some conversion programs.  Updated sox.1
    man page for typo in reverb option.
  o Andrew Church fixed problem with header of stereo 8SVX files.

sox-12.17.4
-----------
  o Peter Nyhlen fixed a problem with reading Comments in Ogg Vorbis files.
  o Added install target to allow installing libgsm from main Makefile.
    Leigh Smith.
  o Minor updates to sox.c to free unused memory and close all input
    files during failures.
  o Pieter Krul added a patch that makes play script look at AUDIODEV
    environment variable if it exists to find which device to use.
    This allows scripts to work with Solaris SunRays and is a good idea
    in general.
  o Updated config.sub to detect latest supported OS's.
  o Fabrizio Gennari added support for reading and writing
    MP3 files using the external libraries libmad and libmp3lame.
  o Jens Henrik Goebbert sent in several bugfixes for integer overflows
    in the compand effect.
  o Dan Dickerman sent in patches for integer overflows in the resample
    effect.
  o Jimen Ching sent in a fix for multi-channel sound file processing
    using the avg effect.
  o Richards Bannister added patches to clean up prototypes and filter
    private sizes being to small.
  o Jimen Ching adds -d option to specify 64bit data size and changed
    Ulaw/Alaw encoding to default to 8bit data size if not specified.
  o David Singer pointed out that a MS program creates AIFF files
    with an invalid length of 0 in its header.  Changed SoX to warn the
    user but continue instead of aborting since SoX can still read
    the file just fine.
  o Bert van Leeuwen added a file handler for Psion record.app used
    for System/Alarms in some Psion devices.